--- a/src/app/dashboard/both/both.component.html
+++ b/src/app/dashboard/both/both.component.html
@@ -1,15 +1,15 @@
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-lg-12 col-sm-12 col-md-2">
         <app-header></app-header>
     </div>
 </div>
 <div class="row">
-    <div class="col-md-2">
+    <div class="col-md-2 col-lg-2 col-sm-2">
         <!-- <app-header></app-header> -->
         <app-dashboard></app-dashboard>
     </div>
     <!-- </div> -->
-    <div class="col-md-9">
+    <div class="col-md-9 col-lg-9 col-sm-9">
         <div class="both">
             <h1><b>Both Leads/Inventory Table</b></h1>
             <br>
@@ -28,7 +28,7 @@
                     <!-- <button class="btn btn-primary rounded-pill" type="submit">Search</button> -->
 
                     <button onclick="window.print()" class="btn btn-primary">Print</button> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-                    <button class="btn btn-primary">Excel</button>
+                    <button (click)="exportTOExcel()" class="btn btn-primary">Excel</button>
                 </div>
             </div>
             <!-- Inventory management table is below -->
@@ -36,20 +36,20 @@
                 <thead>
                     <tr>
                         <th scope="col">ID</th>
-                        <th scope="col">Client</th>
-                        <th scope="col">Type</th>
                         <th scope="col">Purpose</th>
+                        <th scope="col">Client</th>
+                        <th scope="col">Client Type</th>
                         <th scope="col">Prop. Type</th>
-                        <th scope="col">Prop. #</th>
+                        <!-- <th scope="col">Prop. #</th> -->
                         <th scope="col">Area</th>
-                        <th scope="col">Location</th>
+                        <th scope="col" width="30">Location</th>
                         <th scope="col">Demand</th>
                         <th scope="col">Beds</th>
-                        <th scope="col">Phone #</th>
-                        <th scope="col">Comment</th>
+                        <!-- <th scope="col">Phone #</th> -->
+                        <!-- <th scope="col">Comment</th> -->
                         <th scope="col">Assigned To</th>
-                        <th scope="col">Admin Status</th>
-                        <th scope="col">Agent Status</th>
+                        <!-- <th scope="col">Admin Status</th>
+                        <th scope="col">Agent Status</th> -->
                         <th scope="col">Added On</th>
                         <th scope="col">Operations</th>
                     </tr>
@@ -57,28 +57,29 @@
                 <tbody>
                     <tr *ngFor="let user of user | filter: general_search">
                         <!-- | tableFilter06: search_client | tableFilter05: search_demand | tableFilter04: search_type | tableFilter03: search_area | tableFilter02: search_location | tableFilter: search_id -->
-                        <td>{{ user.referenceId }}</td>
+                        <td>{{ user?.referenceId }}</td>
+                        <td>{{ user?.property_purpose }}</td>
 
-                        <td><b>Name : </b>{{ user?.client_name }} <br> <b>Number : </b>{{ user?.client_number}}</td>
+                        <td><b>Name : </b>{{ user?.client_name | titlecase }} <br> <b>Number : </b>{{ user?.client_number}}</td>
                         <!-- <td>{{ user.client_name }}</td> -->
                         <td>{{ user?.client_type }}</td>
-                        <td>{{ user?.property_purpose }}</td>
                         <td>{{ user?.property_type }}</td>
-                        <td>{{ user?.Prop_num }}</td>
+                        <!-- <td>{{ user?.Prop_num }}</td> -->
                         <td>{{ user?.area}}</td>
                         <td>
-                            {{user.city[0]?.city}}<span>&nbsp;&nbsp;</span><br><span class="badge badge-light" *ngFor="let loc of user.location">{{ loc.location }},  </span>
+                            {{user?.city[0]?.city}}<span>&nbsp;&nbsp;</span><br><span class="badge badge-light" *ngFor="let loc of user?.location">{{ loc.location }},  </span>
                         </td>
 
                         <td>{{ user?.demand_price }}</td>
                         <td>{{ user?.beds_number }}</td>
-                        <td>{{ user?.Phone_num }}</td>
-                        <td>{{ user?.Comment }}</td>
-                        <td>{{ user.assigned_to?.name}}</td>
-                        <td>{{ user?.Admin_status }}</td>
-                        <td>{{ user?.Agent_status }}</td>
+                        <!-- <td>{{ user?.Phone_num }}</td> -->
+                        <!-- <td>{{ user?.Comment }}</td> -->
+                        <td>{{ user?.assigned_to}}</td>
+                        <!-- <td>{{ user?.Admin_status }}</td>
+                        <td>{{ user?.Agent_status }}</td> -->
                         <td>{{ user?.created | date: "dd/MM/yyyy"}}</td>
-                        <td><i class="fa fa-edit icon" (click)="setUser(user)"></i><a (click)="setUser(user)" role="button">Edit</a>
+                        <td><i class="fa fa-edit icon" (click)="setUser(user)"></i>
+                            <a (click)="setUser(user)" role="button"></a>
 
                             <i class="fa fa-trash icon" (click)="confirmID(user._id)" data-toggle="modal" data-target="#exampleModal1"></i>
 
