--- a/src/app/dashboard/leads/add-leads/add-leads.component.html
+++ b/src/app/dashboard/leads/add-leads/add-leads.component.html
@@ -12,8 +12,7 @@
                         <div class="form-group">
                             <div class="input-group">
                                 ID
-                                <input type="number" class="form-control" formControlName="id" required
-                                    autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.id.errors }" />
+                                <input type="number" class="form-control" formControlName="id" required autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.id.errors }" />
                                 <div *ngIf="submitted && f.id.errors" class="invalid-feedback">
                                     <div *ngIf="f.id.errors.required">Id is required</div>
                                 </div>
@@ -24,8 +23,7 @@
                         <div class="form-group">
                             <div class="input-group">
                                 Client
-                                <input type="text" class="form-control" formControlName="client" required
-                                    autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.client.errors }" />
+                                <input type="text" class="form-control" formControlName="client" required autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.client.errors }" />
                                 <div *ngIf="submitted && f.client.errors" class="invalid-feedback">
                                     <div *ngIf="f.client.errors.required">Client is required</div>
                                 </div>
@@ -37,8 +35,7 @@
                         <div class="form-group">
                             <div class="input-group">
                                 Type
-                                <input formControlName="type" class="form-control" type="text" list="productName2"
-                                    [ngClass]="{ 'is-invalid': submitted && f.type.errors }" />
+                                <input formControlName="type" class="form-control" type="text" list="productName2" [ngClass]="{ 'is-invalid': submitted && f.type.errors }" />
                                 <div *ngIf="submitted && f.type.errors" class="invalid-feedback">
                                     <div *ngIf="f.type.errors.required">Type is required</div>
                                 </div>
@@ -55,8 +52,7 @@
                         <div class="form-group">
                             <div class="input-group">
                                 Purpose
-                                <input formControlName="purpose" class="form-control" type="text" list="productName3"
-                                    [ngClass]="{ 'is-invalid': submitted && f.purpose.errors }" />
+                                <input formControlName="purpose" class="form-control" type="text" list="productName3" [ngClass]="{ 'is-invalid': submitted && f.purpose.errors }" />
                                 <div *ngIf="submitted && f.purpose.errors" class="invalid-feedback">
                                     <div *ngIf="f.purpose.errors.required">Purpose is required</div>
                                 </div>
@@ -73,8 +69,7 @@
                         <div class="form-group">
                             <div class="input-group">
                                 Property Type
-                                <input formControlName="prop_type" class="form-control" type="text" list="productName4"
-                                    [ngClass]="{ 'is-invalid': submitted && f.prop_type.errors }" />
+                                <input formControlName="prop_type" class="form-control" type="text" list="productName4" [ngClass]="{ 'is-invalid': submitted && f.prop_type.errors }" />
                                 <div *ngIf="submitted && f.prop_type.errors" class="invalid-feedback">
                                     <div *ngIf="f.prop_type.errors.required">Property Type is required</div>
                                 </div>
@@ -89,10 +84,8 @@
                     <div class="col-md-6 col-sm-6">
                         <div class="form-group">
                             <div class="input-group">
-                                <br><br>
-                                Property Number
-                                <input type="number" class="form-control" formControlName="prop_no" required
-                                    autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.prop_no.errors }" />
+                                <br><br> Property Number
+                                <input type="text" class="form-control" formControlName="prop_no" required autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.prop_no.errors }" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" />
                                 <div *ngIf="submitted && f.prop_no.errors" class="invalid-feedback">
                                     <div *ngIf="f.prop_no.errors.required">Property Number is required</div>
                                 </div>
@@ -102,10 +95,8 @@
                     <div class="col-md-6 col-sm-6">
                         <div class="form-group">
                             <div class="input-group">
-                                <br><br>
-                                Area
-                                <input type="text" class="form-control" formControlName="area" required
-                                    autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.area.errors }" />
+                                <br><br> Area
+                                <input type="text" class="form-control" formControlName="area" required autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.area.errors }" />
                                 <div *ngIf="submitted && f.area.errors" class="invalid-feedback">
                                     <div *ngIf="f.area.errors.required">Area is required</div>
                                 </div>
@@ -115,10 +106,8 @@
                     <div class="col-md-6 col-sm-6">
                         <div class="form-group">
                             <div class="input-group">
-                                <br><br>
-                                Location
-                                <input type="text" class="form-control" formControlName="location" required
-                                    autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.location.errors }" />
+                                <br><br> Location
+                                <input type="text" class="form-control" formControlName="location" required autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.location.errors }" />
                                 <div *ngIf="submitted && f.location.errors" class="invalid-feedback">
                                     <div *ngIf="f.location.errors.required">Location is required</div>
                                 </div>
@@ -128,10 +117,8 @@
                     <div class="col-md-6 col-sm-6">
                         <div class="form-group">
                             <div class="input-group">
-                                <br>
-                                Demand
-                                <input type="number" class="form-control" formControlName="demand" required
-                                    autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.demand.errors }" />
+                                <br> Demand
+                                <input type="text" class="form-control" formControlName="demand" required autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.demand.errors }" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" />
                                 <div *ngIf="submitted && f.demand.errors" class="invalid-feedback">
                                     <div *ngIf="f.demand.errors.required">Demand is required</div>
                                 </div>
@@ -141,10 +128,8 @@
                     <div class="col-md-6 col-sm-6">
                         <div class="form-group">
                             <div class="input-group">
-                                <br>
-                                Phone number
-                                <input type="number" class="form-control" formControlName="phone_no" required
-                                    autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.phone_no.errors }" />
+                                <br> Phone number
+                                <input type="text" class="form-control" formControlName="phone_no" required autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.phone_no.errors }" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" />
                                 <div *ngIf="submitted && f.phone_no.errors" class="invalid-feedback">
                                     <div *ngIf="f.phone_no.errors.required">Phone number is required</div>
                                 </div>
@@ -154,10 +139,8 @@
                     <div class="col-md-6 col-sm-6">
                         <div class="form-group">
                             <div class="input-group">
-                                <br><br>
-                                Comment
-                                <input type="text" class="form-control" formControlName="comment" required
-                                    autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.comment.errors }" />
+                                <br><br> Comment
+                                <input type="text" class="form-control" formControlName="comment" required autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.comment.errors }" />
                                 <div *ngIf="submitted && f.comment.errors" class="invalid-feedback">
                                     <div *ngIf="f.comment.errors.required">Comment is required</div>
                                 </div>
@@ -167,11 +150,8 @@
                     <div class="col-md-6 col-sm-6">
                         <div class="form-group">
                             <div class="input-group">
-                                <br><br>
-                                Assigned To
-                                <input type="text" class="form-control" formControlName="assigned_to" required
-                                    autocomplete="off"
-                                    [ngClass]="{ 'is-invalid': submitted && f.assigned_to.errors }" />
+                                <br><br> Assigned To
+                                <input type="text" class="form-control" formControlName="assigned_to" required autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.assigned_to.errors }" />
                                 <div *ngIf="submitted && f.assigned_to.errors" class="invalid-feedback">
                                     <div *ngIf="f.assigned_to.errors.required">Assigned To is required</div>
                                 </div>
@@ -183,9 +163,7 @@
                         <div class="form-group">
                             <div class="input-group">
                                 Admin Status
-                                <input formControlName="admin_status" class="form-control" type="text"
-                                    list="productName"
-                                    [ngClass]="{ 'is-invalid': submitted && f.admin_status.errors }" />
+                                <input formControlName="admin_status" class="form-control" type="text" list="productName" [ngClass]="{ 'is-invalid': submitted && f.admin_status.errors }" />
                                 <div *ngIf="submitted && f.admin_status.errors" class="invalid-feedback">
                                     <div *ngIf="f.admin_status.errors.required">Admin status is required</div>
                                 </div>
@@ -202,9 +180,7 @@
                         <div class="form-group">
                             <div class="input-group">
                                 Agent Status
-                                <input formControlName="agent_status" class="form-control" type="text"
-                                    list="productName1"
-                                    [ngClass]="{ 'is-invalid': submitted && f.agent_status.errors }" />
+                                <input formControlName="agent_status" class="form-control" type="text" list="productName1" [ngClass]="{ 'is-invalid': submitted && f.agent_status.errors }" />
                                 <div *ngIf="submitted && f.agent_status.errors" class="invalid-feedback">
                                     <div *ngIf="f.agent_status.errors.required">Agent Status is required</div>
                                 </div>
@@ -219,10 +195,8 @@
                     <div class="col-md-6 col-sm-6">
                         <div class="form-group">
                             <div class="input-group">
-                                <br><br>
-                                Added On
-                                <input type="text" class="form-control" formControlName="added_on" required
-                                    autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.added_on.errors }" />
+                                <br><br> Added On
+                                <input type="text" class="form-control" formControlName="added_on" required autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.added_on.errors }" />
                                 <div *ngIf="submitted && f.added_on.errors" class="invalid-feedback">
                                     <div *ngIf="f.added_on.errors.required">Added On is required</div>
                                 </div>
