--- a/src/app/dashboard/leads/leads.component.css
+++ b/src/app/dashboard/leads/leads.component.css
@@ -42,7 +42,7 @@ th {
 
 @media only screen and (min-width: 1200px)and (max-width: 1400px) {
     .leads {
-        margin-left: 80px;
+        margin-left: 100px;
     }
 }
 
@@ -52,9 +52,10 @@ th {
     }
 }
 
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 1150px) {
     .leads {
         margin-left: 120px;
+        overflow-x: auto;
     }
 }
 
